package resources;

public enum ResourceType {
    GOLD,
    IRON,
    WOOD,
    FOOD
}
